# CHESS

./: .gitignore  CMakeLists.txt  main.cpp
Addons/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl2.h
Addons/imgui/examples/example_glfw_opengl3/: main.cpp
Addons/imgui/examples/example_win32_opengl3/: main.cpp
Addons/imgui/misc/freetype/: imgui_freetype.cpp
Addons/imgui/misc/single_file/: imgui_single_file.h
ENGINE/: Board.cpp  Board.h  Piece.cpp  Piece.h
ENGINE/ENTITY/: Board.cpp  Board.h  Piece.cpp  Piece.h
ENGINE/ENTITY/Board/: Board.cpp  Board.h
ENGINE/ENTITY/CheckDetector/: CheckDetector.cpp  CheckDetector.h
ENGINE/ENTITY/FENparser/: FENparser.cpp  FENparser.h
ENGINE/ENTITY/Move/: Move.hpp
ENGINE/ENTITY/MoveHandler/: MoveHandler.cpp  MoveHandler.h
ENGINE/ENTITY/Piece/: Piece.cpp  Piece.h
ENGINE/ENTITY/Position/: Position.hpp
ENGINE/ENTITY/Types/: Bishop.hpp  King.hpp  Knight.hpp  Pawn.hpp  Queen.hpp  Rook.hpp
ENGINE/GRAPHICS/: resourceManager.cpp  resourceManager.h  text.h  texture.h
ENGINE/GRAPHICS/GameLevel/: GameLevel.cpp  GameObject.h
ENGINE/GRAPHICS/Renderer/: SpriteRenderer.h
ENGINE/GRAPHICS/Texture/: texture.cpp
